# paddlefish

./: CMakeLists.txt  Makefile  README.md  TODO.md  cid_to_gid.cpp  color_profile.cpp  color_profile.h  colorspace_properties.cpp  command.cpp  custom_object.cpp  document.cpp  file_stream.cpp  file_stream.h  flate.cpp  flate.h  font.cpp  graphics_state.cpp  graphics_state.h  image.cpp  image.h  info.cpp  info.h  ocg.cpp  ocg.h  page.cpp  page.h  pdf_object.h  resources_dict.cpp  text.cpp  text.h  text_state.cpp  text_state.h  util.cpp  version.cpp
Test/: basic.cpp  pattern.cpp
examples/: CMakeLists.txt  Makefile  basic.cpp  blank.cpp  empdfer.cpp  indexed.cpp  pattern.cpp  ttf.cpp
include/paddlefish/: cid_to_gid.h  colorspace_properties.h  command.h  custom_object.h  document.h  file_stream.h  font.h  image.h  paddlefish.h  page.h  pdf_object.h  resources_dict.h  truetype.h  util.h  version.h
src/: CMakeLists.txt  cid_to_gid.cpp  color_profile.cpp  colorspace_properties.cpp  custom_object.cpp  document.cpp  file_stream.cpp  flate.cpp  font.cpp  image.cpp  info.cpp  page.cpp  resources_dict.cpp  text.cpp  truetype.cpp  util.cpp
